--- a/Quanlyquancafe/Quanlyquancafe/appsettings.json
+++ b/Quanlyquancafe/Quanlyquancafe/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "MyConStr": "server=LAPTOP-DGQ6A129; database= SE1422_Demo; user=sa ; password=123456"
+    "MyConStr": "server=ADMIN\\SQLEXPRESSS; database= QL_QUANCAFE; user=sa ; password=12345678"
   }
 }
